Bug 688929 - Prevent saving window attributes before WM_WINDOWPOSCHANGED on window restore. r=jimm